--- a/trunk/OgreMain/scripts/OgreMain.vcproj
+++ b/trunk/OgreMain/scripts/OgreMain.vcproj
@@ -384,6 +384,9 @@ makeall_vc7.bat
 				RelativePath="..\include\OgreAnimation.h">
 			</File>
 			<File
+				RelativePath="..\include\OgreAnimationState.h">
+			</File>
+			<File
 				RelativePath="..\include\OgreAnimationTrack.h">
 			</File>
 			<File
