--- a/trunk/Tools/MilkshapeExport/misc/MilkshapeExport.rc
+++ b/trunk/Tools/MilkshapeExport/misc/MilkshapeExport.rc
@@ -1,4 +1,4 @@
-// Microsoft Visual C++ generated resource script.
+//Microsoft Developer Studio generated resource script.
 //
 #include "resource.h"
 
@@ -27,18 +27,18 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 // TEXTINCLUDE
 //
 
-1 TEXTINCLUDE 
+1 TEXTINCLUDE MOVEABLE PURE 
 BEGIN
     "resource.h\0"
 END
 
-2 TEXTINCLUDE 
+2 TEXTINCLUDE MOVEABLE PURE 
 BEGIN
     "#include ""afxres.h""\r\n"
     "\0"
 END
 
-3 TEXTINCLUDE 
+3 TEXTINCLUDE MOVEABLE PURE 
 BEGIN
     "\r\n"
     "\0"
@@ -64,11 +64,10 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_UK
 // Dialog
 //
 
-IDD_OPTIONS DIALOGEX 0, 0, 323, 121
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
-    WS_SYSMENU
+IDD_OPTIONS DIALOG DISCARDABLE  0, 0, 323, 121
+STYLE DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "OGRE Export Options"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
+FONT 8, "MS Shell Dlg"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,211,100,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,266,100,50,14
@@ -77,7 +76,7 @@ BEGIN
     CONTROL         "Export Mesh",IDC_EXPORT_MESH,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,15,14,56,10
     CONTROL         "Export Skeleton && Animation",IDC_EXPORT_SKEL,"Button",
-                    BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,15,28,107,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,15,28,107,10
     LTEXT           "Note: OGRE supports more advanced materials than Milkshape. You can get better effects if you just name the material in Milkshape, but then define the material in an OGRE .material script. You don't have to export the material definitions in this case.",
                     IDC_STATIC,25,60,271,33
 END
@@ -89,7 +88,7 @@ END
 //
 
 #ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO 
+GUIDELINES DESIGNINFO MOVEABLE PURE 
 BEGIN
     IDD_OPTIONS, DIALOG
     BEGIN
