--- a/trunk/Docs/Docs/Config/html_nightly.cfg
+++ b/trunk/Docs/Docs/Config/html_nightly.cfg
@@ -915,24 +915,24 @@ CGI_NAME               = search.cgi
 # cgi binaries are located. See the documentation of your http daemon for 
 # details.
 
-CGI_URL                = http://ogre.sourceforge.net/cgi-bin/
+CGI_URL                = http://ogre.sourceforge.net/cgi-bin
 
 # The DOC_URL tag should be the absolute URL to the directory where the 
 # documentation is located. If left blank the absolute path to the 
 # documentation, with file:// prepended to it, will be used.
 
-DOC_URL                = http://ogre.sourceforge.net/nightly/docs/
+DOC_URL                = http://ogre.sourceforge.net/nightly/docs
 
 # The DOC_ABSPATH tag should be the absolute path to the directory where the 
 # documentation is located. If left blank the directory on the local machine 
 # will be used.
 
-DOC_ABSPATH            = /home/groups/o/og/ogre/htdocs/nightly/docs/
+DOC_ABSPATH            = /home/groups/o/og/ogre/htdocs/nightly/docs
 
 # The BIN_ABSPATH tag must point to the directory where the doxysearch binary 
 # is installed.
 
-BIN_ABSPATH            = /usr/bin/
+BIN_ABSPATH            = /usr/bin
 
 # The EXT_DOC_PATHS tag can be used to specify one or more paths to 
 # documentation generated for other projects. This allows doxysearch to search 
