--- a/trunk/Docs/Docs/Config/html_nightly.cfg
+++ b/trunk/Docs/Docs/Config/html_nightly.cfg
@@ -860,7 +860,7 @@ DOT_IMAGE_FORMAT       = jpg
 # The tag DOT_PATH can be used to specify the path where the dot tool can be 
 # found. If left blank, it is assumed the dot tool can be found on the path.
 
-DOT_PATH               = 
+DOT_PATH               = /home/groups/o/og/ogre/dot_tools/bin
 
 # The DOTFILE_DIRS tag can be used to specify one or more directories that 
 # contain dot files that are included in the documentation (see the 
