--- a/trunk/OgreMain/Makefile
+++ b/trunk/OgreMain/Makefile
@@ -1,28 +1,21 @@
 files := $(shell echo src/*.cpp src/*.c)
 objects := $(filter %.o, $(files:src/%.cpp=obj/%.o) ) $(filter %.o, $(files:src/%.c=obj/%.o) )
-include := -Iinclude -I$(STLPORT_DIR)
+incdirs := -Iinclude -I$(STLPORT_DIR) $(CUSTOM_INCS)
+defines :=
+libraries := $(LIBS)
 
 all: $(objects)
-        echo $(objects)
+	ar rcs lib/libOgreMain.a $(objects)
+	$(CXX) -shared -Wl,-soname,lib/libOgreMain.so -o lib/libOgreMain.so $(libraries) $(LDFLAGS) $(objects)
 
 $(objects): obj/%.o: src/%.cpp
-        $(CC) -c $(CFLAGS) -Iinclude -I../STLport-4.5.3/stlport $< -o $@
+	$(CXX) -fPIC -Wall -c $(CFLAGS) $(defines) $(incdirs) $< -o $@
+
+$(objects): obj/%.o: src/%.c
+	$(CC) -fPIC -Wall -c $(CFLAGS) $(defines) $(incdirs) $< -o $@
 
 clean:
 	@-rm $(objects)
-
-#SUBDIRS = src
-#all:
-#	for sd in $(SUBDIRS); do \
-#		echo "Building in $$sd"; \
-#		(cd $$sd && make all) || exit 1; \
-#	done
-#clean:
-#	for sd in $(SUBDIRS); do \
-#		echo "Cleaning in $$sd"; \
-#		(cd $$sd && make clean) || exit 1; \
-#	done
-#
 
 #-----------------------------------------------------------------------------
 # This is the CVS log of the file. Do NOT modify beyond this point as this
@@ -30,4 +23,7 @@ clean:
 # (for more info, see http://www.cvshome.org/docs/manual/cvs_12.html#SEC103 )
 #
 # $Log: not supported by cvs2svn $
+# Revision 1.2  2002/08/22 11:39:06  cearny
+# Highly modified, now using make functions for better protability (who knows?) - still got to work on it.
+#
 #-----------------------------------------------------------------------------
