--- a/trunk/OgreMain/scripts/OgreMain.vcproj
+++ b/trunk/OgreMain/scripts/OgreMain.vcproj
@@ -20,7 +20,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				ImproveFloatingPointConsistency="FALSE"
-				AdditionalIncludeDirectories="..\include;..\..\Dependencies\zlib\include;..\..\Dependencies\libpng\include;..\..\Dependencies\jpeglib\include;..\..\Dependencies\freetype\include"
+				AdditionalIncludeDirectories="..\include;..\..\Dependencies\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;OGREMAIN_EXPORTS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -36,12 +36,12 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="zlib.lib libpng.lib jpeglib.lib dinput.lib freetype.lib"
+				AdditionalDependencies="libz.lib libpng.lib libjpeg.lib libfreetype.lib"
 				OutputFile="$(OutDir)/OgreMain.dll"
 				Version="0.99"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;..\..\Dependencies\zlib\lib\$(ConfigurationName)&quot;;&quot;..\..\Dependencies\libpng\lib\$(ConfigurationName)&quot;;&quot;..\..\Dependencies\jpeglib\lib\$(ConfigurationName)&quot;;..\..\Dependencies\freetype\objs"
+				AdditionalLibraryDirectories="..\..\Dependencies\lib"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/OgreMain.pdb"
 				SubSystem="2"
@@ -86,7 +86,7 @@ makeall_vc7.bat
 				OmitFramePointers="TRUE"
 				EnableFiberSafeOptimizations="TRUE"
 				OptimizeForProcessor="2"
-				AdditionalIncludeDirectories="..\include;..\..\Dependencies\zlib\include;..\..\Dependencies\libpng\include;..\..\Dependencies\jpeglib\include;..\..\Dependencies\freetype\include"
+				AdditionalIncludeDirectories="..\include;..\..\Dependencies\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;OGREMAIN_EXPORTS"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -101,12 +101,12 @@ makeall_vc7.bat
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="zlib.lib libpng.lib jpeglib.lib dinput.lib freetype.lib"
+				AdditionalDependencies="libz.lib libpng.lib libjpeg.lib libfreetype.lib"
 				OutputFile="$(OutDir)/OgreMain.dll"
 				Version="0.99"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;..\..\Dependencies\zlib\lib\$(ConfigurationName)&quot;;&quot;..\..\Dependencies\libpng\lib\$(ConfigurationName)&quot;;&quot;..\..\Dependencies\jpeglib\lib\$(ConfigurationName)&quot;;..\..\Dependencies\freetype\objs"
+				AdditionalLibraryDirectories="..\..\Dependencies\lib"
 				GenerateDebugInformation="FALSE"
 				SubSystem="2"
 				OptimizeReferences="2"
